# CaptchaBreaker

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: benchmarks.rs
docs/: CAPTCHA.md  USE.md
src/: captcha.rs  config.rs  environment.rs  lapjv.rs  lib.rs  loader.rs  model.rs  tests.rs
