[package]
name = "captcha_breaker"
version = "0.0.0-dev.2"
edition = "2024"
license = "AGPL-3.0-only"
description = "多种验证码识别实现"
homepage = "https://github.com/Amorter/CaptchaBreaker"
repository = "https://github.com/Amorter/CaptchaBreaker"
readme = "README.md"

[dev-dependencies]
criterion = "^0.5.1"

[[bench]]
name = "benchmarks"
harness = false

[dependencies]
image = "^0.25.6"
ndarray = "^0.16.1"
ort = { version = "=2.0.0-rc.9"}
reqwest = {version = "^0.12.15", features = ["blocking"]}

[features]
default = ["chinese_click_0"]
chinese_click_0 = []

# ort
cuda = ["ort/cuda"]
tensorrt = ["ort/tensorrt"]
directml = ["ort/directml"]
nnapi = ["ort/nnapi"]
coreml = ["ort/coreml"]