[package]
name = "captcha_breaker"
version = "0.0.0-dev.6"
edition = "2024"
license = "AGPL-3.0-only"
description = "多种验证码识别实现"
homepage = "https://github.com/Amorter/CaptchaBreaker"
repository = "https://github.com/Amorter/CaptchaBreaker"
readme = "README.md"

[dev-dependencies]
criterion = "^0.5.1"

[[bench]]
name = "benchmarks"
harness = false

[dependencies]
image = "^0.25.6"
ndarray = "^0.16.1"
ort = { version = "=2.0.0-rc.9", default-features = false , features = ["copy-dylibs", "half", "ndarray"] }
reqwest = {version = "^0.12.15", features = ["blocking"]}
num-traits = "0.2.19"
log = "0.4.27"
imageproc = "^0.25.0"

[features]
default = ["download-binaries", "chinese_click_0", "slide_0"]
chinese_click_0 = []
slide_0 = []

# ort
cuda = ["ort/cuda"]
tensorrt = ["ort/tensorrt"]
directml = ["ort/directml"]
nnapi = ["ort/nnapi"]
coreml = ["ort/coreml"]
download-binaries = ["ort/download-binaries"]
